# Nova-Voice-Agent

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/audio/: constants.py  devices.py  models.py  recorder.py
app/config/: settings.py
app/core/: application.py  logger.py
app/services/: README.md
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: audio_store.py  routes.py  schemas.py
backend/app/audio/: audio_utils.py
backend/app/conversation/: manager.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/fallback/: filler_manager.py
backend/app/llm/: base.py  groq_provider.py  llm_manager.py  ollama_provider.py
backend/app/stt/: groq_stt.py  stt_manager.py  whisper_stt.py
backend/app/tts/: online_tts.py  piper_tts.py  tts_manager.py
backend/app/utils/: timing.py
backend/app/vad/: silero_vad.py
backend/tests/: conftest.py  test_api_health.py  test_audio_store.py  test_conversation_manager.py  test_fallback_manager.py  test_llm_manager.py
docs/: AI_USAGE.md  ARCHITECTURE.md  DEPLOYMENT.md  GOOGLE_DRIVE_SUBMISSION_GUIDE.md  INSTALLATION.md  INTERNSHIP_REPORT.md  LATENCY_NOTES.md  SUBMISSION_REPORT.md  TESTING.md  TROUBLESHOOTING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: MicOrb.tsx  StatusBar.tsx  TranscriptPanel.tsx
frontend/src/hooks/: useAudioRecorder.ts  useVoiceAssistant.ts
scripts/: run_backend.sh  run_frontend.sh  setup.sh
(+1 files in other folders)
