[project]
name = "nova-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
